; ModuleID = '/home/carl/AnghaBench/zstd/lib/dictBuilder/extr_fastcover.c_FASTCOVER_hashPtrToIndex.c'
source_filename = "/home/carl/AnghaBench/zstd/lib/dictBuilder/extr_fastcover.c_FASTCOVER_hashPtrToIndex.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i8*, i32, i32)* @FASTCOVER_hashPtrToIndex to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @FASTCOVER_hashPtrToIndex(i8* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %8 = load i32, i32* %7, align 4
  %9 = icmp eq i32 %8, 6
  br i1 %9, label %10, label %19

10:                                               ; preds = %3
  %11 = load i8*, i8** %5, align 8
  %12 = load i32, i32* %6, align 4
  %13 = call i32 @ZSTD_hash6Ptr(i8* %11, i32 %12)
  %14 = load i32, i32* %6, align 4
  %15 = shl i32 1, %14
  %16 = sub nsw i32 %15, 1
  %17 = and i32 %13, %16
  %18 = sext i32 %17 to i64
  store i64 %18, i64* %4, align 8
  br label %28

19:                                               ; preds = %3
  %20 = load i8*, i8** %5, align 8
  %21 = load i32, i32* %6, align 4
  %22 = call i32 @ZSTD_hash8Ptr(i8* %20, i32 %21)
  %23 = load i32, i32* %6, align 4
  %24 = shl i32 1, %23
  %25 = sub nsw i32 %24, 1
  %26 = and i32 %22, %25
  %27 = sext i32 %26 to i64
  store i64 %27, i64* %4, align 8
  br label %28

28:                                               ; preds = %19, %10
  %29 = load i64, i64* %4, align 8
  ret i64 %29
}

declare dso_local i32 @ZSTD_hash6Ptr(i8*, i32) #1

declare dso_local i32 @ZSTD_hash8Ptr(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
